--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="#"><img class="github-logo" src="githublogo.svg" alt="githublogo"></a>
+    <a href="https://github.com/alperenustun/excusegenerator"><img class="github-logo" src="githublogo.svg" alt="githublogo"></a>
     <main>
         <h2>Excuse Generator</h2>
         <div class="screen">
